# sandbox-actions

./: LICENSE
.github/workflows/: ci.yml
apps/app1/app/: pyproject.toml
apps/app1/batch/batch1/: main.py  pyproject.toml
apps/app1/batch/batch1/tests/: test_main.py
apps/app2/app/: pyproject.toml
apps/app2/batch/batch2/: pyproject.toml
